# CodexPoker

./: .gitignore  AGENTS.md  README.md
backend/: pyproject.toml
backend/src/codexpoker_backend/: main.py
backend/src/codexpoker_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/codexpoker_backend/api/: deps.py  routes.py
backend/src/codexpoker_backend/bots/: policy.py
backend/src/codexpoker_backend/engine/: internal.py  models.py  service.py
backend/src/codexpoker_backend/repo/: base.py  in_memory.py
backend/src/codexpoker_backend/tools/: replay_cli.py
backend/src/codexpoker_backend/utils/: cards.py  hashing.py
backend/tests/: conftest.py  test_engine_fuzz.py  test_engine_golden.py  test_masking_and_replay.py  test_utils.py
frontend/: vite.config.ts
frontend/src/: App.css  App.tsx  animations.ts  api.ts  orchestrator.ts  types.ts  usePokerGame.ts
